--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Filip Troníček",
   "license": "MIT",
   "dependencies": {
+    "@vercel/node": "^1.12.1",
     "link-preview-js": "^2.1.6",
     "validator": "^13.6.0"
   }
